--- a/Kaggle_practice/유형1/[MOCK EXAM2] TYPE1 작업형1 모의고사2.ipynb
+++ b/Kaggle_practice/유형1/[MOCK EXAM2] TYPE1 작업형1 모의고사2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bfe5103d",
+   "id": "3fe35e38",
    "metadata": {},
    "source": [
     "1. index가 짝수인 행만(0포함) 선택해 \"petal width (cm)\" 값을 모두 더하시오"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "38d00a32",
+   "id": "15e4796b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "54e4c8a0",
+   "id": "0f796d77",
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef2e2d91",
+   "id": "e2f84471",
    "metadata": {},
    "source": [
     "2. city를 기준으로 'f1'컬럼의 그룹합을 더한 뒤 그 값이 가장 큰 인덱스 명을 구하시오"
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "20c8383b",
+   "id": "e6957111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8bef31a0",
+   "id": "76448bc2",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "524c330b",
+   "id": "f31af2a7",
    "metadata": {},
    "source": [
     "3. f1 컬럼 중 결측치가 있는 데이터를 선택하고, 그 데이터의 f5 컬럼 중앙값을 구하시오"
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "aab64cad",
+   "id": "6c0c46de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,201 +116,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f5849025",
+   "execution_count": 28,
+   "id": "2c0e747c",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>age</th>\n",
-       "      <th>city</th>\n",
-       "      <th>f1</th>\n",
-       "      <th>f2</th>\n",
-       "      <th>f3</th>\n",
-       "      <th>f4</th>\n",
-       "      <th>f5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 8 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id    age   city     f1     f2     f3     f4     f5\n",
-       "0   False  False  False   True  False   True  False  False\n",
-       "1   False  False  False  False  False   True  False  False\n",
-       "2   False  False  False  False  False   True  False  False\n",
-       "3   False  False  False   True  False   True  False  False\n",
-       "4   False  False  False  False  False   True  False  False\n",
-       "..    ...    ...    ...    ...    ...    ...    ...    ...\n",
-       "95  False  False  False  False  False   True  False  False\n",
-       "96  False  False  False   True  False   True  False  False\n",
-       "97  False  False  False  False  False   True  False  False\n",
-       "98  False  False  False  False  False   True  False  False\n",
-       "99  False  False  False  False  False  False  False  False\n",
-       "\n",
-       "[100 rows x 8 columns]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60.33982554\n"
+     ]
     }
    ],
    "source": [
-    "df][.isnull()"
+    "print(df[df['f1'].isnull()]['f5'].median())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db06fc1e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
