--- a/Kaggle_practice/유형1/T1시리즈.ipynb
+++ b/Kaggle_practice/유형1/T1시리즈.ipynb
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 28,
    "id": "f374b0c6",
    "metadata": {},
    "outputs": [
@@ -792,7 +792,7 @@
        "[100 rows x 8 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,8 +806,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
-   "id": "18972e08",
+   "execution_count": 29,
+   "id": "5c1b5fd9",
    "metadata": {},
    "outputs": [
     {
@@ -822,9 +822,336 @@
     "df = df[df['age']>0]\n",
     "df = df[(df['age'] == round(df['age'],0))]\n",
     "\n",
-    "age = df['age'].sort_values()t\n",
+    "age = df['age'].sort_values()\n",
     "count = len(age)//3\n",
     "print(age[0:count].median() + age[count:count*2].median() + age[count*2:count*3].median())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40990da1",
+   "metadata": {},
+   "source": [
+    "20. 고객과 잘 맞는 타입 추천 :)\n",
+    "- basic1 데이터 중 'f4'를 기준으로 basic3 데이터 'f4'값을 기준으로 병합하고,\n",
+    "- 병합한 데이터에서 r2결측치를 제거한다음, 앞에서 부터 20개 데이터를 선택하고 'f2'컬럼합을 구하시오\n",
+    "- basic1.csv: 고객 데이터\n",
+    "- basic3.csv: 잘 어울리는 관계 데이터 (추천1:r1, 추천2:r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "af657d46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     id   age city    f1  f2   f3    f4         f5\n",
+      "0  id01   2.0   서울   NaN   0  NaN  ENFJ  91.297791\n",
+      "1  id02   9.0   서울  70.0   1  NaN  ENFJ  60.339826\n",
+      "2  id03  27.0   서울  61.0   1  NaN  ISTJ  17.252986\n",
+      "3  id04  75.0   서울   NaN   2  NaN  INFP  52.667078\n",
+      "4  id05  24.0   서울  85.0   2  NaN  ISFJ  29.269869\n",
+      "     f4    r1    r2\n",
+      "0  INFP  ENFJ  ENTJ\n",
+      "1  ENFP  INFJ   NaN\n",
+      "2  INFJ  ENFP  ENTP\n",
+      "3  ENFJ  INFP  ISFP\n",
+      "4  INTJ  ENFP  ENTP\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df1 = pd.read_csv('./basic1.csv')\n",
+    "df2 = pd.read_csv('./basic3.csv')\n",
+    "\n",
+    "print(df1.head())\n",
+    "print(df2.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "785a0b8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_data = pd.merge(df1, df2, on = 'f4', how = 'left')\n",
+    "merged_data.dropna(subset = ['r2']).head(20)['f2'].sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85580e51",
+   "metadata": {},
+   "source": [
+    "19. 주어진 데이터에서 2022년 월별 Sales 합계 중 가장 큰 금액과 2023년 월별 Sales 합계 중 가장 큰 금액의 차이를 절대값으로 구하시오.\n",
+    "- 단 Events컬럼이 '1'인경우 80%의 Salse값만 반영함\n",
+    "- (최종값은 소수점 반올림 후 정수 출력)\n",
+    "- 데이터셋 : basic2.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "205a0c37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Sales</th>\n",
+       "      <th>PV</th>\n",
+       "      <th>UV</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>22711525</td>\n",
+       "      <td>397349</td>\n",
+       "      <td>4421.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>36779</td>\n",
+       "      <td>3969</td>\n",
+       "      <td>2289.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>13943875</td>\n",
+       "      <td>373890</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>8088593</td>\n",
+       "      <td>142054</td>\n",
+       "      <td>2157.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>2395374</td>\n",
+       "      <td>190684</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>725</th>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>33846609</td>\n",
+       "      <td>415067</td>\n",
+       "      <td>7360.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>726</th>\n",
+       "      <td>2023-12-28</td>\n",
+       "      <td>3659566</td>\n",
+       "      <td>208601</td>\n",
+       "      <td>2262.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>727</th>\n",
+       "      <td>2023-12-29</td>\n",
+       "      <td>1164008</td>\n",
+       "      <td>14309</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>728</th>\n",
+       "      <td>2023-12-30</td>\n",
+       "      <td>3977696</td>\n",
+       "      <td>60935</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>729</th>\n",
+       "      <td>2023-12-31</td>\n",
+       "      <td>3719764</td>\n",
+       "      <td>60963</td>\n",
+       "      <td>1507.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>730 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Date     Sales      PV      UV  Events\n",
+       "0    2022-01-01  22711525  397349  4421.0       1\n",
+       "1    2022-01-02     36779    3969  2289.0       0\n",
+       "2    2022-01-03  13943875  373890     NaN       1\n",
+       "3    2022-01-04   8088593  142054  2157.0       0\n",
+       "4    2022-01-05   2395374  190684     NaN       0\n",
+       "..          ...       ...     ...     ...     ...\n",
+       "725  2023-12-27  33846609  415067  7360.0       1\n",
+       "726  2023-12-28   3659566  208601  2262.0       1\n",
+       "727  2023-12-29   1164008   14309   193.0       0\n",
+       "728  2023-12-30   3977696   60935     NaN       0\n",
+       "729  2023-12-31   3719764   60963  1507.0       0\n",
+       "\n",
+       "[730 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('./basic2.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "e96047a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42473436\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\komsco\\AppData\\Local\\Temp\\ipykernel_4204\\867285697.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['Sales'][i] = df['Sales'][i]*0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "df['year'] = df['Date'].dt.year\n",
+    "df['month'] = df['Date'].dt.month\n",
+    "\n",
+    "for i in range(len(df)):\n",
+    "    if df['Events'][i]==1:\n",
+    "        df['Sales'][i] = df['Sales'][i]*0.8\n",
+    "\n",
+    "des = df.groupby(['year','month'])['Sales'].sum().to_frame().reset_index()\n",
+    "tt_ = des[des['year']==2022]['Sales'].max()\n",
+    "tt__ = des[des['year']==2023]['Sales'].max()\n",
+    "\n",
+    "print(round(abs(tt__ - tt_)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b5e6c9b",
+   "metadata": {},
+   "source": [
+    "18. 주어진 데이터에서 2022년 5월 주말과 평일의 sales컬럼 평균값 차이를 구하시오 (소수점 둘째자리까지 출력, 반올림)\n",
+    "- 데이터셋 : basic2.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "470ec7e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3010339.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('./basic2.csv')\n",
+    "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "df['year'] = df['Date'].dt.year\n",
+    "df['month'] = df['Date'].dt.month\n",
+    "df['day'] = df['Date'].dt.day\n",
+    "df['dayofweek'] = df['Date'].dt.dayofweek\n",
+    "yn = []\n",
+    "for i in range(len(df)):\n",
+    "    if df['dayofweek'][i]>=5:\n",
+    "        yn.append(1)\n",
+    "    else:\n",
+    "        yn.append(0)\n",
+    "df['week'] = yn\n",
+    "\n",
+    "df.index = df['Date']\n",
+    "one = df[(df['week']==1) & (df['year']==2022) & (df['month']==5)]['Sales'].mean()\n",
+    "two = df[(df['week']==0) & (df['year']==2022) & (df['month']==5)]['Sales'].mean()\n",
+    "\n",
+    "print(round(abs(one - two),2))"
    ]
   },
   {
@@ -1017,9 +1344,211 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb88d694",
+   "metadata": {},
+   "source": [
+    "16. 주어진 데이터 셋에서 f2가 0값인 데이터를 age를 기준으로 오름차순 정렬하고 앞에서 부터 20개의 데이터를 추출한 후 f1 결측치(최소값)를 채우기 전과 후의 분산 차이를 계산하시오 (소수점 둘째 자리까지)\n",
+    "\n",
+    "- 데이터셋 : basic1.csv \n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- File -> Editor Type -> Script\n",
+    " -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "5d2aaa6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "38.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('./basic1.csv')\n",
+    "before = df[df['f2']==0].sort_values(by = ['age']).head(20)\n",
+    "before_var = before['f1'].var()\n",
+    "min_f1 = before['f1'].min()\n",
+    "after_var = before['f1'].fillna(min_f1).var()\n",
+    "\n",
+    "print(round(abs(before_var - after_var),2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05cfcba8",
+   "metadata": {},
+   "source": [
+    "15. 주어진 데이터 셋에서 age컬럼 상위 20개의 데이터를 구한 다음, f1의 결측치를 중앙값으로 채운다. 그리고 f4가 ISFJ와 f5가 20 이상인  f1의 평균값을 출력하시오!\n",
+    "\n",
+    "- 데이터셋 : basic1.csv \n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- File -> Editor Type -> Script\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "ca0ddbb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('./basic1.csv')\n",
+    "new_df = df.sort_values('age', ascending = False).head(20)\n",
+    "f1_median = new_df['f1'].median()\n",
+    "\n",
+    "new_df['f1'] = new_df['f1'].fillna(f1_median)\n",
+    "print(round(new_df[(new_df['f4']=='ISFJ') & (new_df['f5']>=20)]['f1'].mean(),3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4487e5c",
+   "metadata": {},
+   "source": [
+    "14. city와 f4를 기준으로 f5의 평균값을 구한 다음, f5를 기준으로 상위 7개 값을 모두 더해 출력하시오 (소수점 둘째자리까지 출력)\n",
+    "- 데이터셋 : basic1.csv \n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- File -> Editor Type -> Script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "05b0447e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "643.68\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('./basic1.csv')\n",
+    "print(round(df.groupby(['city', 'f4'])['f5'].mean().to_frame().reset_index().sort_values('f5', ascending = False).head(7)['f5'].sum(),2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fcdca5a",
+   "metadata": {},
+   "source": [
+    "13. 상관관계 구하기 주어진 데이터에서 상관관계를 구하고, quality와의 상관관계가 가장 큰 값과, 가장 작은 값을 구한 다음 더하시오!\n",
+    "- 단, quality와 quality 상관관계 제외, 소수점 둘째 자리까지 출력\n",
+    "\n",
+    "- 데이터셋 : ../input/red-wine-quality-cortez-et-al-2009/winequality-red.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- 스크립트 방식 권장: File -> Editor Type -> Script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b4623666",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.49\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('./winequality-red.csv')\n",
+    "cor_data = abs(df.corr()['quality'][:-1])\n",
+    "print(round(cor_data.max() + cor_data.min(),2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14a2f093",
+   "metadata": {},
+   "source": [
+    "12. 주어진 데이터에서 상위 10개 국가의 접종률 평균과 하위 10개 국가의 접종률 평균을 구하고, 그 차이를 구해보세요 \n",
+    "- (단, 100%가 넘는 접종률 제거, 소수 첫째자리까지 출력)\n",
+    "\n",
+    "- 데이터셋 : ../input/covid-vaccination-vs-death/covid-vaccination-vs-death_ratio.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- File -> Editor Type -> Script\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "8e197c25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 데이터를 못구했네.."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee5aaecb",
+   "metadata": {},
+   "source": [
+    "11.주어진 데이터에서 'f5'컬럼을 min-max 스케일 변환한 후, 상위 5%와 하위 5% 값의 합을 구하시오\n",
+    "\n",
+    "- 데이터셋 : basic1.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- File -> Editor Type -> Script\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0a9adc9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0248740983597389\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "sc = MinMaxScaler()\n",
+    "df = pd.read_csv('./basic1.csv')\n",
+    "df['f5'] = sc.fit_transform(df[['f5']])\n",
+    "print(df['f5'].quantile(0.95) + df['f5'].quantile(0.05))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31c20e0c",
+   "id": "a1a65452",
    "metadata": {},
    "outputs": [],
    "source": []
