--- a/Kaggle_practice/유형1/T1시리즈.ipynb
+++ b/Kaggle_practice/유형1/T1시리즈.ipynb
@@ -1546,9 +1546,468 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03f9b320",
+   "metadata": {},
+   "source": [
+    "10. 수치형 변수 변환하기 주어진 데이터에서 20세 이상인 데이터를 추출하고 'f1'컬럼을 결측치를 최빈값으로 채운 후, f1 컬럼의 여-존슨과 박스콕스 변환 값을 구하고, 두 값의 차이를 절대값으로 구한다음 모두 더해 소수점 둘째 자리까지 출력(반올림)하시오\n",
+    "- 데이터셋 : basic1.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0e399149",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39.17\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\komsco\\AppData\\Local\\Temp\\ipykernel_21644\\4038907393.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  data_age_over_20['f1'] = data_age_over_20['f1'].fillna(data_age_over_20['f1'].mode()[0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import power_transform\n",
+    "\n",
+    "data = pd.read_csv('./basic1.csv')\n",
+    "data_age_over_20 = data[data['age']>=20]\n",
+    "data_age_over_20['f1'] = data_age_over_20['f1'].fillna(data_age_over_20['f1'].mode()[0])\n",
+    "pt = power_transform(data_age_over_20[['f1']],  standardize=False)\n",
+    "pt_box = power_transform(data_age_over_20[['f1']], method = 'box-cox', standardize=False)\n",
+    "\n",
+    "print(round(abs(pt-pt_box).sum(),2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec5aa5f0",
+   "metadata": {},
+   "source": [
+    "9. 수치형 변수 변환하기 주어진 데이터에서 'f5'컬럼을 표준화(Standardization (Z-score Normalization))하고 그 중앙값을 구하시오\n",
+    "- 데이터셋 : basic1.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "b39465eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.260619629559015"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "data = pd.read_csv('./basic1.csv')\n",
+    "sc = StandardScaler()\n",
+    "np.median(sc.fit_transform(data[['f5']]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2222816e",
+   "metadata": {},
+   "source": [
+    "8. 주어진 데이터 셋에서 'f2' 컬럼이 1인 조건에 해당하는 데이터의 'f1'컬럼 누적합을 계산한다. 이때 발생하는 누적합 결측치는 바로 뒤의 값을 채우고, 누적합의 평균값을 출력한다. (단, 결측치 바로 뒤의 값이 없으면 다음에 나오는 값을 채워넣는다)¶\n",
+    "\n",
+    "- 데이터셋 : basic1.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "eea83018",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "980.3783783783783\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('./basic1.csv')\n",
+    "print(data[data['f2']==1]['f1'].cumsum().fillna(method = 'bfill').mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04a9c727",
+   "metadata": {},
+   "source": [
+    "7. 'f4'컬럼의 값이 'ESFJ'인 데이터를 'ISFJ'로 대체하고, 'city'가 '경기'이면서 'f4'가 'ISFJ'인 데이터 중 'age'컬럼의 최대값을 출력하시오!\n",
+    "- 데이터셋 : basic1.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "d9c9ced3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('./basic1.csv')\n",
+    "data['f4'].replace('ESFJ','ISFJ', inplace = True)\n",
+    "print(data[(data['city']=='경기') & (data['f4']=='ISFJ')]['age'].max())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0896e07e",
+   "metadata": {},
+   "source": [
+    "6. 결측치 제거 및 그룹 합계에서 조건에 맞는 값 찾아 출력 주어진 데이터 중 basic1.csv에서 'f1'컬럼 결측 데이터를 제거하고, 'city'와 'f2'을 기준으로 묶어 합계를 구하고, 'city가 경기이면서 f2가 0'인 조건에 만족하는 f1 값을 구하시오\n",
+    "- 데이터셋 : basic1.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "d7d4e6cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "833.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('./basic1.csv')\n",
+    "data_new = data.dropna(subset = 'f1')\n",
+    "data_new = data_new.groupby(['city', 'f2']).sum().reset_index()\n",
+    "print(data_new[(data_new['city']=='경기') & (data_new['f2']==0)]['f1'][0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e5fce73",
+   "metadata": {},
+   "source": [
+    "5. 조건에 맞는 데이터 표준편차 구하기 주어진 데이터 중 basic1.csv에서 'f4'컬럼 값이 'ENFJ'와 'INFP'인 'f1'의 표준편차 차이를 절대값으로 구하시오\n",
+    "- 데이터셋 : basic1.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "a69d0e82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.859621525876811\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('./basic1.csv')\n",
+    "print(abs(data[data['f4']=='ENFJ']['f1'].std() - data[data['f4']=='INFP']['f1'].std()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63191c81",
+   "metadata": {},
+   "source": [
+    "4. 주어진 데이터 중 train.csv에서 'SalePrice'컬럼의 왜도와 첨도를 구한 값과, 'SalePrice'컬럼을 스케일링(log1p)로 변환한 이후 왜도와 첨도를 구해 모두 더한 다음 소수점 2째자리까지 출력하시오\n",
+    "- 데이터셋 : House Prices \n",
+    "- Advanced Regression Technique (https://www.kaggle.com/c/house-prices-advanced-regression-techniques)\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "a492dd0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before skew 1.8828757597682129\n",
+      "before kurt 6.536281860064529\n",
+      "after skew 0.12134661989685333\n",
+      "after_kurt 0.809519155707878\n",
+      "sums : 9.35\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.read_csv('./house-prices-advanced-regression-techniques/train.csv')\n",
+    "skews = data['SalePrice'].skew()\n",
+    "kurts = data['SalePrice'].kurt()\n",
+    "\n",
+    "print('before skew', skews)\n",
+    "print('before kurt', kurts)\n",
+    "\n",
+    "log_sc_sale_price = np.log1p(data['SalePrice'])\n",
+    "skwes_after = log_sc_sale_price.skew()\n",
+    "kurts_after = log_sc_sale_price.kurt()\n",
+    "\n",
+    "print('after skew', skwes_after)\n",
+    "print('after_kurt', kurts_after)\n",
+    "\n",
+    "print('sums :', round(skews+kurts+skwes_after+kurts_after,2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7aed516",
+   "metadata": {},
+   "source": [
+    "3. 결측치 처리 주어진 데이터에서 결측치가 80%이상 되는 컬럼은(변수는) 삭제하고, 80% 미만인 결측치가 있는 컬럼은 'city'별 중앙값으로 값을 대체하고 'f1'컬럼의 평균값을 출력하세요!\n",
+    "- 데이터셋 : basic1.csv 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- 강의 영상 : https://youtu.be/WqlpqBRn7x4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "3cd2c9dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>city</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>f2</th>\n",
+       "      <th>f4</th>\n",
+       "      <th>f5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id01</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ENFJ</td>\n",
+       "      <td>91.297791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>id02</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ENFJ</td>\n",
+       "      <td>60.339826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>id03</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ISTJ</td>\n",
+       "      <td>17.252986</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>id04</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "      <td>INFP</td>\n",
+       "      <td>52.667078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>id05</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>서울</td>\n",
+       "      <td>85.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ISFJ</td>\n",
+       "      <td>29.269869</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>id96</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>경기</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ENTJ</td>\n",
+       "      <td>52.667078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>id97</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>경기</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>INFP</td>\n",
+       "      <td>67.886373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>id98</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>경기</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>INFP</td>\n",
+       "      <td>98.429899</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>id99</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>경기</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ESFJ</td>\n",
+       "      <td>97.381034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>id100</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>경기</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ESFP</td>\n",
+       "      <td>33.308999</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id    age city    f1  f2    f4         f5\n",
+       "0    id01    2.0   서울   NaN   0  ENFJ  91.297791\n",
+       "1    id02    9.0   서울  70.0   1  ENFJ  60.339826\n",
+       "2    id03   27.0   서울  61.0   1  ISTJ  17.252986\n",
+       "3    id04   75.0   서울   NaN   2  INFP  52.667078\n",
+       "4    id05   24.0   서울  85.0   2  ISFJ  29.269869\n",
+       "..    ...    ...  ...   ...  ..   ...        ...\n",
+       "95   id96   92.0   경기  53.0   1  ENTJ  52.667078\n",
+       "96   id97  100.0   경기   NaN   0  INFP  67.886373\n",
+       "97   id98   39.0   경기  58.0   2  INFP  98.429899\n",
+       "98   id99    1.0   경기  47.0   0  ESFJ  97.381034\n",
+       "99  id100   47.0   경기  53.0   0  ESFP  33.308999\n",
+       "\n",
+       "[100 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('./basic1.csv')\n",
+    "data.isnull().sum()/len(data)>=0.8\n",
+    "del data['f3']\n",
+    "\n",
+    "data_new = data.groupby(['city']).median().reset_index()\n",
+    "data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a65452",
+   "id": "638fab72",
    "metadata": {},
    "outputs": [],
    "source": []
