--- a/Kaggle_practice/유형1/T1시리즈.ipynb
+++ b/Kaggle_practice/유형1/T1시리즈.ipynb
@@ -1821,176 +1821,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 46,
    "id": "3cd2c9dd",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>age</th>\n",
-       "      <th>city</th>\n",
-       "      <th>f1</th>\n",
-       "      <th>f2</th>\n",
-       "      <th>f4</th>\n",
-       "      <th>f5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>id01</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ENFJ</td>\n",
-       "      <td>91.297791</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>id02</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ENFJ</td>\n",
-       "      <td>60.339826</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>id03</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ISTJ</td>\n",
-       "      <td>17.252986</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>id04</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>INFP</td>\n",
-       "      <td>52.667078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>id05</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>서울</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>ISFJ</td>\n",
-       "      <td>29.269869</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>id96</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>경기</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ENTJ</td>\n",
-       "      <td>52.667078</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>id97</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>경기</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>INFP</td>\n",
-       "      <td>67.886373</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>id98</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>경기</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>INFP</td>\n",
-       "      <td>98.429899</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>id99</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>경기</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ESFJ</td>\n",
-       "      <td>97.381034</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>id100</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>경기</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>ESFP</td>\n",
-       "      <td>33.308999</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id    age city    f1  f2    f4         f5\n",
-       "0    id01    2.0   서울   NaN   0  ENFJ  91.297791\n",
-       "1    id02    9.0   서울  70.0   1  ENFJ  60.339826\n",
-       "2    id03   27.0   서울  61.0   1  ISTJ  17.252986\n",
-       "3    id04   75.0   서울   NaN   2  INFP  52.667078\n",
-       "4    id05   24.0   서울  85.0   2  ISFJ  29.269869\n",
-       "..    ...    ...  ...   ...  ..   ...        ...\n",
-       "95   id96   92.0   경기  53.0   1  ENTJ  52.667078\n",
-       "96   id97  100.0   경기   NaN   0  INFP  67.886373\n",
-       "97   id98   39.0   경기  58.0   2  INFP  98.429899\n",
-       "98   id99    1.0   경기  47.0   0  ESFJ  97.381034\n",
-       "99  id100   47.0   경기  53.0   0  ESFP  33.308999\n",
-       "\n",
-       "[100 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65.52\n"
+     ]
     }
    ],
    "source": [
@@ -2001,13 +1841,105 @@
     "del data['f3']\n",
     "\n",
     "data_new = data.groupby(['city']).median().reset_index()\n",
-    "data"
+    "def extr(city):\n",
+    "    datas = data_new[data_new['city']==city]['f1'].values[0]\n",
+    "    \n",
+    "    return datas\n",
+    "\n",
+    "seoul = extr('서울')\n",
+    "daegu = extr('대구')\n",
+    "busan = extr('부산')\n",
+    "gg = extr('경기')\n",
+    "\n",
+    "data['f1'] = data['f1'].fillna(data['city'].map({\n",
+    "    '서울' : seoul,\n",
+    "    '대구' : daegu,\n",
+    "    '부산' : busan,\n",
+    "    '경기' : gg\n",
+    "}))\n",
+    "\n",
+    "print(data['f1'].mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b6e37cd",
+   "metadata": {},
+   "source": [
+    "2. 주어진 데이터에서 이상치(소수점 나이)를 찾고 올림, 내림, 버림(절사)했을때 3가지 모두 이상치 'age' 평균을 구한 다음 모두 더하여 출력하시오¶\n",
+    "- 데이터셋 : basic1.csv\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- 강의 영상 : https://youtu.be/c3Fr9G-ZYdw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c2075497",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.read_csv('./basic1.csv')\n",
+    "outliers = data[(data['age']*10)%10!=0].reset_index(drop = True)\n",
+    "\n",
+    "\n",
+    "print(np.ceil(outliers['age']).mean() + np.floor(outliers['age'].mean()+ np.trunc(outliers['age'].mean())))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1a4862e",
+   "metadata": {},
+   "source": [
+    "1. 데이터에서 IQR을 활용해 Fare컬럼의 이상치를 찾고, 이상치 데이터의 여성 수를 구하시오\n",
+    "- 강의 영상 : https://youtu.be/ipBW5D_UJEo\n",
+    "- 데이터셋 : titanic\n",
+    "- 오른쪽 상단 copy&edit 클릭 -> 예상문제 풀이 시작\n",
+    "- 데이터 위치 \"../input/titanic/train.csv\" (copy&edit가 아닐 경우 별도로 데이터셋 불러와야 함)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "8c5c2a2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = pd.read_csv('./titanic/train.csv')\n",
+    "iqr = data['Fare'].quantile(0.75) - data['Fare'].quantile(0.25)\n",
+    "\n",
+    "lower = data['Fare'].quantile(0.25) - iqr*1.5\n",
+    "upper = data['Fare'].quantile(0.75) + iqr*1.5\n",
+    "\n",
+    "outlier_data = data[(data['Fare']<lower) | (data['Fare']>upper)]\n",
+    "print(outlier_data[outlier_data['Sex']=='female']['Sex'].count())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "638fab72",
+   "id": "62489dec",
    "metadata": {},
    "outputs": [],
    "source": []
